# tuno

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOP.md  README.md  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
.github/workflows/: release-client.yml
docs/: DESIGN.md  DEVELOP.md
scripts/: build-client-binary.sh  bump_version.py  install-local.sh  install.sh  tag.sh
scripts/entrypoints/: tuno_binary.py
src/: worker.py
src/tuno/: __init__.py
src/tuno/client/: __init__.py  __main__.py  actions.py  api.py  app.py  app.tcss  commands.py  completion.py  config.py  rendering.py  runtime.py  state.py  theme.py  tls.py  updates.py  view_state.py
src/tuno/client/cli/: __init__.py  app.py  uninstall.py  update.py
src/tuno/client/tui/: __init__.py  app.py  app.tcss  commands.py  completion.py  rendering.py  suggestions.py  view_state.py
src/tuno/cloudflare/: __init__.py  worker.py
src/tuno/core/: __init__.py  cards.py  events.py  game.py  game_storage.py  prng.py  snapshot.py
src/tuno/protocol/: __init__.py  messages.py
src/tuno/server/: __init__.py  __main__.py  actions.py  local.py  rooms.py  session.py  standalone.py  worker.py
tests/: _client_app_support.py  test_cards.py  test_client_app_flow.py  test_client_command_bar.py  test_client_commands.py  test_client_completion.py  test_client_config.py  test_client_rendering.py  test_client_theme.py  test_client_updates.py  test_game.py  test_game_events.py  test_game_round_flow.py  test_server_actions.py  test_server_client_connection.py  test_versioning.py
tests/client/: support.py  test_actions.py  test_cli.py  test_runtime.py  test_state.py  test_updates.py
tests/client/tui/: test_app_flow.py  test_command_controller.py  test_commands.py  test_completion.py
tests/core/: test_cards.py  test_events.py  test_game.py  test_game_storage.py  test_round_flow.py  test_snapshot.py
tests/protocol/: test_messages.py
tests/scripts/: test_versioning.py
tests/server/: test_actions.py  test_client_connection.py  test_rooms.py
