[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuno"
version = "0.1.0"
description = "A terminal-first UNO game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.76,<1.0",
    "websockets>=12,<16",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15,<0.16",
]
worker = [
    "workers-py",
    "workers-runtime-sdk",
]
build = [
    "pyinstaller>=6,<7",
]

[project.scripts]
tuno = "tuno.client.app:main"
tuno-server = "tuno.server.local:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tuno.client" = ["*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/_client_app_support.py" = ["E402"]
"tests/test_game.py" = ["E402"]
"tests/test_server_client_connection.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
