[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuno"
dynamic = ["version"]
description = "A terminal-first UNO game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.76,<1.0",
    "websockets>=12,<16",
    "certifi>=2024.0.0",
    "PyYAML>=6.0.2,<7",
    "typer>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15,<0.16",
]
worker = [
    "workers-py",
    "workers-runtime-sdk",
]
build = [
    "pyinstaller>=6,<7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[project.scripts]
tuno = "tuno.client.__main__:app"
tuno-server = "tuno.server.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "tuno.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tuno.client.tui" = ["*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/client/support.py" = ["E402"]
"tests/core/test_game.py" = ["E402"]
"tests/server/test_client_connection.py" = ["E402"]
"tests/server/test_rooms.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
